cleanup InventoryHandler